merge 2018.1-EAP.vmoptions