@@ -33,3 +33,28 @@
 
 # 使用g1 gc时。可以指定使用在Oracle JDK 8u20之后增加的G1 GC下的字符串排重。降低内存使用
 -XX:+UseStringDeduplication
+
+# ------------------------------------------------------------------------------------------ #
+# 貌似是从idea 2018某一eap版本中复制出来的 #
+-Xms2048m
+-XX:ReservedCodeCacheSize=1024m
+-XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-server
+-XX:+UseStringCache
+-XX:+OptimizeStringConcat
+-XX:+UseFastAccessorMethods
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-Xverify:none
+
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-Xbootclasspath/a:../lib/boot.jar
+-Xmx2048m
+-Dide.no.platform.update=true
